[project]
name = "marimo-tutorials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dspy>=3.0.1",
    "ipython>=9.7.0",
    "kuzu>=0.11.1",
    "marimo>=0.14.17",
    "matplotlib>=3.10.7",
    "numpy>=2.3.2",
    "pandas>=2.3.3",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=2.2.0",
]
